css/home.css
/* Add Roboto font and imports */
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@import './variables.css';
@import './buttons.css';
@import './animations.css';

/* Debugging */
/* body * {
  border: solid 1px green;
} */
/* add the code bg */
html {
  background: linear-gradient(rgba(255,255,255,.75), rgba(255,255,255,.75)), url('/img/code-bg.svg');
  font-family: 'Roboto', sans-serif;
  color: var(--text-dark);
}

body {
  max-width: 1600px;
  margin: auto;
  overflow-x: hidden;
  padding: 0 0.5rem;
}

nav {
  text-align: center;
  height: 3rem;
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 0.5rem;
}

.nav-title {
  font-size: 1.75rem;
  color: var(--primary);
}

.nav-links {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.social-link {
  height: 2.5rem;
  margin: 0.5rem;
}

.hero {
  display: grid;
  gap: 1rem;
  grid-template-columns: 2fr 1fr;
  align-items: center;
  justify-items: center;
  padding: 0.5rem 0;
  width: calc(100% - 2rem);
}

.hero-text {
  font-size: 1.25rem;
  text-align: center;
  margin: 0;
}

.typewriter {
  border-right: 3px solid var(--primary);
  height: 4rem;
  font-size: 3rem;
  overflow: hidden;
  white-space: nowrap;
}

#hi-bitmoji {
  grid-row: span 2;
  height: 200px;
}

.todo {
  text-align: center;
}

.section-heading {
  color: var(--primary);
  text-align: center;
}

.sub-heading {
  text-align: center;
}

.skill-grid {
  justify-content: center;
  display: grid;
  gap: 0.5rem;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  justify-items: center;
  align-items: center;
}

.skill {
  display: flex;
  align-items: center;
  min-width: 100px;
}

.sk-badge {
  height: 2rem;
  margin: 0.5rem;
}

.project-grid {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(calc(380px - 1rem), 1fr));
  justify-items: stretch;
  align-items: stretch;
}

.card {
  background-color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
  border-radius: 2px;
  padding: 1rem;
}

.card-text {
  padding: 0.5rem 0;
}

.project {
  display: flex;
  flex-direction: column;
}

.project-title {
  display: grid;
  gap: 1rem;
  font-size: 1.5rem;
  grid-template-columns: auto auto;
  justify-content: center;
  align-items: center;
  margin-bottom: 0.5rem;
}

.project-logo {
  height: 4rem;
  padding: 0 0.5rem;
}

.project-links {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.card-title {
  margin: 0;
}

.card-subtitle {
  font-size: 0.9rem;
  margin: 0.5rem 0;
}

.project-tech {
  display: flex;
  justify-content: center;
  margin-top: auto;
}

.project-tech > img {
  height: 2rem;
  padding: 0 1rem;
}

@media screen and (max-width: 450px) {
  .hero, .project-grid {
    grid-template-columns: 1fr;
  }
  .nav-title{
    font-size: 1.25rem;
  }
}

